--- a/style.css
+++ b/style.css
@@ -1,15 +1,56 @@
-.div.body{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-
 .buttonContainer{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-content: center;
+    border-color: green;
+    border-width: 10px;
+    height: 400px;
+    width: 600px;
+    align-items: center;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: lightsteelblue;
+
+}
+
+#rock,
+#paper,
+#scissors,
+button{
+    height: 50px;
+    width: 100px;
+    border-radius: 10px;
+    color:black;
+    border-color:rgb(90, 73, 73);
+    box-shadow: 3px 3px 3px rgb(0, 0, 0);
+    transition:all .05s;
+}
+#rock{
+    background-color: #AFF8D8;
+}
+#paper{
+    background-color: #ACE7FF;
+}
+#scissors{
+    background-color: #FFABAB;
+}
+
+.abox{
+
+border: 10px;
+border-color: blue;
+border-width: 10px;
+background: green;
+
+}
+.clicked{
+transform:scale(1.1);
+border-color: #A7BED3
 
 
 }
